cmake_minimum_required(VERSION 2.8)
project(cartographer_native_interface)
set(CMAKE_BUILD_TYPE Release)
find_package(JNI REQUIRED)
include_directories(${JNI_INCLUDE_DIRS})
link_directories(/usr/local/lib/absl/ /usr/lib/x86_64-linux-gnu/ /usr/local/lib/)
include_directories(/usr/local/include)
include_directories(/usr/include/eigen3/)
include_directories(/usr/include/lua5.2/)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES cartographer_jni_bridge.cpp cartographer_jni_cpp_bridge.cpp cartographer_jni_cpp_bridge.h)
add_library(cartographer_native_interface SHARED ${SOURCE_FILES})

target_link_libraries(cartographer_native_interface cartographer protobuf protobuf-lite protoc glog pthread ceres boost_iostreams lua5.2 cholmod blas lapack cxsparse cairo)
